<resources>
    <string name="app_name">SignUpTest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="rpass">Repeat Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
</resources>
